--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5ee67d37-d455-405a-af8b-bdb4dc4679f9"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
